# transmute

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/transmute/formats/: archidekt.py  moxfield.py  mtggoldfish.py
src/transmute/scryfall/: api.py
test/: example_response.json  gld_output.csv  hel_output.csv  mtggoldfish.csv  test_transmute.py
tests/: conftest.py  test_converter.py
tests/fixtures/: archidekt.csv  moxfield.csv  mtggoldfish.csv
tests/formats/: test_archidekt.py  test_helvault.py  test_moxfield.py  test_mtggoldfish.py
transmute/: card.py  collection.py  constants.py  scryfall_api.py  transmute.py
